Use ImmutableList
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/program-dependence-graph@33055 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c